# sonnet

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
cmake/: CompilerOptions.cmake  FetchDependencies.cmake  ShaderCompilation.cmake
specs/001-basic-window-triangle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-basic-window-triangle/checklists/: requirements.md
specs/001-basic-window-triangle/contracts/: cmake-modules.md  renderer-api.md  window-api.md
specs/002-github-actions-ci/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-github-actions-ci/checklists/: requirements.md
specs/002-github-actions-ci/contracts/: ci-workflow.md
specs/003-code-quality-ci/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-code-quality-ci/checklists/: requirements.md
specs/003-code-quality-ci/contracts/: ci-job-contract.md  developer-commands.md
specs/005-editor-ui-layout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-editor-ui-layout/checklists/: requirements.md
specs/005-editor-ui-layout/contracts/: editor-interfaces.md
src/app/: CMakeLists.txt  main.cpp
src/editor/: CMakeLists.txt
src/editor/include/sonnet/editor/: EditorFactory.hpp  IEditor.hpp  ILayoutManager.hpp  IPanel.hpp
src/editor/src/: Editor.cpp  Editor.hpp  EditorFactory.cpp  LayoutManager.cpp  LayoutManager.hpp  sonnet_editor_placeholder.cpp
src/editor/src/log/: EditorLogSink.cpp  EditorLogSink.hpp
src/editor/src/panels/: InspectorPanel.cpp  InspectorPanel.hpp  LogPanel.cpp  LogPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  ViewportPanel.cpp  ViewportPanel.hpp
src/logging/: CMakeLists.txt
src/logging/include/sonnet/logging/: Logger.hpp
src/logging/src/: Logger.cpp
src/renderer/: CMakeLists.txt
src/renderer/include/sonnet/renderer/: IRenderer.hpp  IRendererBackend.hpp  RendererFactory.hpp
src/renderer/src/: Renderer.cpp  Renderer.hpp
src/renderer_vulkan/: CMakeLists.txt
src/renderer_vulkan/include/sonnet/renderer/: VulkanBackendFactory.hpp
src/renderer_vulkan/src/: VulkanBackend.cpp  VulkanBackend.hpp
src/renderer_vulkan/src/shaders/: triangle.vert
src/window/: CMakeLists.txt
src/window/include/sonnet/window/: IWindow.hpp  WindowFactory.hpp
src/window/src/: SDLWindow.cpp  SDLWindow.hpp  WindowFactory.cpp
tests/: CMakeLists.txt
tests/integration/: AppLifecycleTest.cpp  CMakeLists.txt  EditorLifecycleTest.cpp
tests/unit/: CMakeLists.txt
tests/unit/editor/: CMakeLists.txt  EditorInterfaceTest.cpp  EditorLifecycleUnitTest.cpp  LayoutManagerTest.cpp  LogPanelTest.cpp  PanelFlagsTest.cpp  editor_test_placeholder.cpp
tests/unit/logging/: LoggerTest.cpp
tests/unit/renderer/: RendererInterfaceTest.cpp
tests/unit/window/: WindowInterfaceTest.cpp
